syntax = "proto3";

package proto;
option go_package = "/service/category";

option java_multiple_files = true;
option java_package = "id.grocery.tunas.proto";

import "proto/response.proto";

message Category{
  string category = 1;
  string id = 2;
  string imageUrl = 3;
}

message CategoryId{
  string id = 1;
}

message EmptyCategory{}

message CategoryResponse{
  string status = 1;
  string message = 2;
  Category data = 3;
}

message MultipleCategoryResponse{
  string status = 1;
  string message = 2;
  repeated Category data = 3;
}

service CategoryService{
  rpc FindById(CategoryId) returns(CategoryResponse);
  rpc FindAll(EmptyCategory) returns(MultipleCategoryResponse);
  rpc Save(Category) returns(Response);
  rpc Update(Category) returns(Response);
  rpc Delete(CategoryId) returns(Response);
}